# spotcast

./: .bumpversion.cfg  .gitignore  CHANGELOG.md  CONTRIBUTING.md  NOTICE  README.md  Taskfile.yml  hacs.json  info.md  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg
.github/: CODEOWNERS  FUNDING.yml  dependabot.yml
.github/ISSUE_TEMPLATE/: beta_report.yml  bug_report.yml  config.yml  enhancement_request.yml
.github/workflows/: codeql.yml  coverage.yml  hacs.yaml  hacs.yml  hassfest.yml  linter.yml  unittest.yml
container/: compose.custom_version.yaml
custom_components/spotcast/: __init__.py  cast.py  config_flow.py  const.py  coordinator.py  entry_data.py  exceptions.py  icons.json  manifest.json  services.yaml  strings.json  system_health.py  utils.py
custom_components/spotcast/binary_sensor/: __init__.py  is_default_binary_sensor.py  spotify_profile_malfunction_sensor.py
custom_components/spotcast/chromecast/: spotify_controller.py
custom_components/spotcast/config_flow_classes/: config_flow_handler.py  options_flow_handler.py
custom_components/spotcast/media_player/: __init__.py  chromecast_player.py  device_manager.py  exceptions.py  spotify_player.py  utils.py
custom_components/spotcast/sensor/: __init__.py  abstract_entity.py  abstract_sensor.py  spotify_account_type_sensor.py  spotify_current_context_sensor.py  spotify_devices_sensor.py  spotify_followers_sensor.py  spotify_liked_songs_sensor.py  spotify_playlists_sensor.py  spotify_product_sensor.py  spotify_profile_sensor.py
custom_components/spotcast/services/: add_to_queue.py  const.py  exceptions.py  play_from_search.py  play_media.py  service_handler.py  transfer_playback.py  unlike_media.py  utils.py
custom_components/spotcast/sessions/: __init__.py  connection_session.py  desktop_session.py  exceptions.py  oauth_pcke_implementation.py  private_session.py  public_session.py  retry_supervisor.py
custom_components/spotcast/spotify/: account.py  client.py  exceptions.py  internal_api.py  search_query.py  utils.py
custom_components/spotcast/translations/: en.json  fr.json
custom_components/spotcast/websocket/: __init__.py  cast_devices_handler.py  categories_handler.py  liked_media_handler.py  player_handler.py  playlists_handler.py  search_handler.py  tracks_handler.py  utils.py
docs/: architecture.md
docs/config/: obtaining_desktop_credentials.md  spotcast_configuration.md
docs/services/: add_to_queue.md  like_media.md  play_custom_context.md  play_dj.md  play_from_search.md  play_liked_songs.md  play_media.md  play_saved_episodes.md  transfer_playback.md  unlike_media.md
docs/websocket/: accounts.md  cast_devices.md  categories.md  devices.md  liked_media.md  player.md  playlists.md  search.md  tracks.md
scripts/: connect_desktop_oauth.py  relay_server.ps1  relay_server.py
test/: __init__.py  test_async_cleanup_entities.py  test_async_remove_config_entry_device.py  test_async_setup_entry.py  test_async_unload_entry.py  test_async_update_options.py  test_get_missing_scopes.py  test_options_consistency.py
test/binary_sensor/: test_async_setup_entry.py
test/binary_sensor/abstract_binary_sensor/: test_icon.py  test_is_on.py
test/binary_sensor/is_default_binary_sensor/: test_update_from_coordinator.py
test/binary_sensor/spotify_profile_malfunction_sensor/: test_update_from_coordinator.py
test/chromecast/spotify_controller/: test_get_info_response_handler.py  test_launch_app.py  test_receive_message.py  test_send_message_callback.py
test/config_flow_classes/config_flow_handler/: test_async_get_desktop_token.py  test_async_oauth_create_entry.py  test_async_step_desktop_api.py  test_async_step_desktop_api_auto.py  test_async_step_desktop_api_manual.py  test_async_step_reauth_confirm.py  test_can_convert.py  test_get_pcke_impl.py
test/config_flow_classes/option_flow_handler/: test_async_step_apply_options.py  test_set_base_refresh_rate.py  test_set_default_user.py  test_set_device_options.py
test/coordinator/: test_async_update_data.py  test_constructor.py
test/media_player/: test_async_setup_entry.py
test/media_player/chromecast_player/: test_id.py  test_is_group.py
test/media_player/device_manager/: test_apply_device_options.py  test_async_purge_stale_devices.py  test_async_update.py  test_staleness_persistence.py
test/media_player/spotify_device/: test_define_entity_id.py  test_unique_id.py
test/media_player/utils/: test_async_build_from_type.py
test/sensor/: test_async_setup_entry.py
test/sensor/abstract_entity/: test_constructor.py  test_extra_state_attributes.py  test_generic_id.py  test_get_device_info.py  test_handle_coordinator_update.py  test_icon_off.py  test_name.py  test_unique_id.py
test/sensor/abstract_sensor/: test_icon.py  test_state.py  test_units_of_measurement.py
test/sensor/spotify_account_type_sensor/: test_update_from_coordinator.py
test/sensor/spotify_current_context_sensor/: test_update_from_coordinator.py
test/sensor/spotify_devices_sensor/: test_update_from_coordinator.py
test/sensor/spotify_followers_sensor/: test_update_from_coordinator.py
test/sensor/spotify_liked_songs_sensor/: test_update_from_coordinator.py
test/sensor/spotify_playlists_sensor/: test_update_from_coordinator.py
test/sensor/spotify_product_sensor/: test_update_from_coordinator.py
test/sensor/spotify_profile_sensor/: test_entity_picture.py  test_update_from_coordinator.py
test/services/play_from_search/: test_async_play_from_search.py  test_get_best_candidate.py
test/services/play_media/: test_async_context_index.py  test_async_random_index.py
test/services/transfer_playback/: test_async_rebuild_playback.py  test_async_transfer_playback.py
test/services/unlike_media/: __init__.py  test_async_unlike_media.py
test/services/utils/: test_track_context.py
test/spotify/: test_client.py
test/system_health/: test_system_health_info.py
test/websocket/: test_async_setup_websocket.py
(+100 files in other folders)
