[project]
name = "spotcast"
version = "6.5.2"
description = "Home Assistant custom component to start Spotify playback on an idle Chromecast or a Spotify Connect device. Meaning you can target automation for Chromecast as well as Spotify Connect devices."
readme = "README.md"
requires-python = ">=3.14.2"
license = "LICENSE"
authors = [
    { name = "Niklas Fondberg"},
]
maintainers = [
    { name = "Julien Ehrhart", email = "julien.ehrhart@gmail.com" }
]
dependencies = [
    "atomicwrites-homeassistant>=1.4.1",
    "spotipy>=2.26.0",
    "PyChromecast>=14.0.10",
    "requests>=2.33.1",
    "spotifyaio>=2.0.2",
    "RapidFuzz>=3.14.5",
    "homeassistant>=2026.5.2",
]

[project.urls]
"Homepage" = "https://github.com/Mincka/spotcast"
"Bug Reports" = "https://github.com/Mincka/spotcast/issues/new?template=bug_report.yml"
"Source" = "https://github.com/Mincka/spotcast"

[tool.mypy]
python_version = "3.14"
strict = true
ignore_missing_imports = true
show_error_codes = true
pretty = true
exclude = ["test/"]

[tool.pylint]
max-line-length = 80

[tool.pylsp-mypy]
enabled = true
live_mode = false
strict = true
exclude = ["test/"]

[tool.ruff]
line-length = 80
target-version = "py314"
extend-ignore = ["I001"]
fix = true
src = ["./"]
exclude = ["test/", "scripts/"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "TCH", "TID", "B", "C4", "N", "SIM", "ARG", "D"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.ruff.mccabe]
max-complexity = 10

[tool.ruff.pydocstyle]
convention = "google"

[tool.ruff.per-file-ignores]
"**/__init__.py" = ["D104"]

[dependency-groups]
dev = [
    "time-machine>=3.2.0",
    "pylint",
    "coverage",
    "radon",
    "ruff",
    "mypy",
    "bandit",
    "bump2version>=1.0.1",
]
