[project]
name = "spotcast"
version = "6.5.3"
description = "Home Assistant custom component to start Spotify playback on an idle Chromecast or a Spotify Connect device. Meaning you can target automation for Chromecast as well as Spotify Connect devices."
readme = "README.md"
requires-python = ">=3.14.2"
license = "LICENSE"
authors = [
    { name = "Niklas Fondberg"},
]
maintainers = [
    { name = "Julien Ehrhart", email = "julien.ehrhart@gmail.com" }
]
dependencies = [
    "atomicwrites-homeassistant>=1.4.1",
    "spotipy>=2.26.0",
    "PyChromecast>=14.0.10",
    "requests>=2.33.1",
    "spotifyaio>=2.0.2",
    "RapidFuzz>=3.14.5",
    "homeassistant>=2026.5.2",
]

[project.urls]
"Homepage" = "https://github.com/Mincka/spotcast"
"Bug Reports" = "https://github.com/Mincka/spotcast/issues/new?template=bug_report.yml"
"Source" = "https://github.com/Mincka/spotcast"

[tool.mypy]
python_version = "3.14"
strict = true
ignore_missing_imports = true
show_error_codes = true
pretty = true
exclude = ["test/"]

[tool.pylint]
max-line-length = 80
disable = [
    # Module cycles are inherent to the current package layout
    # (services/websocket/media_player all reference each other through
    # the integration facade).
    "cyclic-import",
    # Service and websocket handlers share small boilerplate blocks
    # (account resolution, media player lookup) by design.
    "duplicate-code",
]

[tool.pylsp-mypy]
enabled = true
live_mode = false
strict = true
exclude = ["test/"]

[tool.ruff]
line-length = 80
target-version = "py314"
extend-ignore = ["I001"]
fix = true
src = ["./"]
exclude = ["test/", "scripts/"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "TCH", "TID", "B", "C4", "N", "SIM", "ARG", "D"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.ruff.mccabe]
max-complexity = 10

[tool.ruff.pydocstyle]
convention = "google"

[tool.ruff.per-file-ignores]
"**/__init__.py" = ["D104"]

[tool.uv]
# Home Assistant exact-pins PyJWT==2.12.1, which has known
# vulnerabilities (all fixed in 2.13.0, GHSA-xgmm-8j9v-c9wx and
# friends). Spotcast never imports pyjwt itself; this only affects the
# dev/test environment. Drop the override once Home Assistant's pin
# reaches 2.13.0.
override-dependencies = [
    "pyjwt>=2.13.0",
]

[dependency-groups]
dev = [
    "time-machine>=3.2.0",
    "pylint",
    "coverage",
    "radon",
    "ruff",
    "mypy",
    "bandit",
    "bump2version>=1.0.1",
]
